--- a/styles.css
+++ b/styles.css
@@ -916,7 +916,7 @@ body {
 
 .btn-toggle {
     cursor: pointer;
-    font-size: 0.8em;
+    font-size: 10px;
     color: var(--primary-text);
     text-decoration: underline;
     margin-bottom: 10px;
